--- a/camera.html
+++ b/camera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vietnamese Lunar New Year - Photo Booth</title>
     <link rel="icon" href="image-home/title-logo.png"/>
-    <link rel="stylesheet" href="Style CSS/camera.css" />
+    <link rel="stylesheet" href="StyleCSS/camera.css" />
 </head>
 <body>
     <div class="background">
@@ -47,6 +47,7 @@
                 </div>
                 <div class="button-group">
                     <button id="printBtn">Print photo</button>
+                    <button id="ResetBtn">Reset</button>
                 </div>
             </div>
         </div>
