--- a/select-Frame.html
+++ b/select-Frame.html
@@ -13,7 +13,7 @@
     <div class="background">
         
         <img src="image-home/home.png" alt="Background Tết" />
-        <div class="content">
+        <section class="content">
             <!-- Thêm thanh lướt chọn khung (slider) dưới nhân vật -->
             <h2 class="select-title">Select frame</h2>
             <div class="menu-group">
@@ -64,7 +64,7 @@
                     </svg></button>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
     <script src="Javascript/select-Frame.js"></script>
