--- a/camera.html
+++ b/camera.html
@@ -45,6 +45,7 @@
                     <img src="Stickerbtn/17.png" class="sticker-item" draggable="true">
                     <img src="Stickerbtn/18.png" class="sticker-item" draggable="true">
                 </div>
+                <div id="editcanvas"></div>
                 <div class="button-group">
                     <button id="printBtn">Print photo</button>
                     <button id="ResetBtn">Reset</button>
