--- a/camera.html
+++ b/camera.html
@@ -49,6 +49,7 @@
                 <div class="button-group">
                     <button id="printBtn">Print photo</button>
                     <button id="ResetBtn">Reset</button>
+                    <button id="homeBtn">Home</button>
                 </div>
             </div>
         </div>
