--- a/upload.html
+++ b/upload.html
@@ -45,8 +45,11 @@
                     <img src="Stickerbtn/17.png" class="sticker-item" draggable="true">
                     <img src="Stickerbtn/18.png" class="sticker-item" draggable="true">
                 </div>
+                <div id="editcanvas"></div>
                 <div class="button-group">
                     <button id="printBtn">Print Photo</button>
+                    <button id="ResetBtn">Reset</button>
+                    <button id="homeBtn">Home</button>
                 </div>
             </div>
         </div>
