--- a/select-Frame.html
+++ b/select-Frame.html
@@ -7,6 +7,9 @@
     <link rel="icon" href="image-home/title-logo.png"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"> 
     <link rel="stylesheet" href="StyleCSS/select-Frame.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600;700;800&family=Baloo+2:wght@700;800&display=swap" rel="stylesheet">
+
 </head>
 <body>
     
@@ -17,18 +20,18 @@
             <!-- Thêm thanh lướt chọn khung (slider) dưới nhân vật -->
             <h2 class="select-title">Select frame</h2>
             <div class="menu-group">
-    <div class="filter-buttons">
-        <div class="filter-btn" data-filter="square">
-            <span>Khung vuông</span>
-        </div>
-    </div>
+                <div class="filter-buttons">
+                    <div class="filter-btn" data-filter="square">
+                        <span>Khung vuông</span>
+                    </div>
+                </div>
 
-    <div class="filter-buttons">
-        <div class="filter-btn" data-filter="portrait">
-            <span>Khung dọc</span>
-        </div>
-    </div>
-</div>
+                <div class="filter-buttons">
+                    <div class="filter-btn" data-filter="portrait">
+                        <span>Khung dọc</span>
+                    </div>
+                </div>
+            </div>
             <div class="frame-slider-container">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
