--- a/camera.html
+++ b/camera.html
@@ -13,7 +13,7 @@
         
         <div class="content">
             <div id="camera-section">
-                <div class="camera-wrapper">
+                <div id="camera-wrapper">
                     <video id="video" autoplay muted playsinline></video>
                     <img id="overlayFrame" class="overlay-frame">
                     <h1 id="countdownDisplay" class="countdown-text"></h1> 
