--- a/select-Frame.html
+++ b/select-Frame.html
@@ -50,7 +50,18 @@
                         <div class="swiper-slide" data-type="portrait">
                             <img src="frame/frame5.png" alt="Frame 5" class="frame">
                         </div>
-                        <!-- Thêm nhiều khung nếu cần -->
+                        <div class="swiper-slide" data-type="square">
+                            <img src="frame/frame6.png" alt="Frame 6" class="frame">
+                        </div>
+                        <div class="swiper-slide" data-type="square">
+                            <img src="frame/frame7.png" alt="Frame 7" class="frame">
+                        </div>
+                        <div class="swiper-slide" data-type="square">
+                            <img src="frame/frame8.png" alt="Frame 8" class="frame">
+                        </div>
+                        <div class="swiper-slide" data-type="square">
+                            <img src="frame/frame9.png" alt="Frame 9" class="frame">
+                        </div>
                     </div>
 
                     <button class="swiper-button-next">
