--- a/upload.html
+++ b/upload.html
@@ -13,14 +13,13 @@
         
         <div class="content">
             <div id="camera-section">
-                <div class="camera-wrapper">                   
+                <div id="camera-wrapper">                   
                     <img id="overlayFrame" class="overlay-frame">
                     <canvas id="photoCanvas"></canvas>
                 </div> 
                 <input type="file" id="fileInput" accept="image/*" class="hidden-input">
                 <div class="button-group">
                     <button id="uploadButton">Upload Photo</button>
-                    
                 </div>
             </div>
 
