--- a/upload.html
+++ b/upload.html
@@ -52,6 +52,9 @@
                 </div>
             </div>
         </div>
+        <audio id="bgMusic" autoplay loop muted>
+            <source src="music.mp3" type="audio/mpeg">
+        </audio>
     </div>
 
     <script src="Javascript/upload.js"></script>
