--- a/camera.html
+++ b/camera.html
@@ -21,6 +21,7 @@
                 </div> 
                 <div class="button-group">
                     <button id="captureButton">Capture</button>
+                    <button id="completeButton" >Complete</button>
                 </div>
             </div>
 
