--- a/upload.html
+++ b/upload.html
@@ -20,6 +20,7 @@
                 <input type="file" id="fileInput" accept="image/*" class="hidden-input">
                 <div class="button-group">
                     <button id="uploadButton">Upload Photo</button>
+                    <button id="completeButton" >Complete</button>
                 </div>
             </div>
 
