--- a/select-Frame.html
+++ b/select-Frame.html
@@ -17,18 +17,17 @@
         
         <img src="image-home/home.png" alt="Background Tết" />
         <section class="content">
-            <!-- Thêm thanh lướt chọn khung (slider) dưới nhân vật -->
             <h2 class="select-title">Select frame</h2>
             <div class="menu-group">
                 <div class="filter-buttons">
                     <div class="filter-btn" data-filter="square">
-                        <span>Khung vuông</span>
+                        <span>Square</span>
                     </div>
                 </div>
 
                 <div class="filter-buttons">
-                    <div class="filter-btn" data-filter="portrait">
-                        <span>Khung dọc</span>
+                    <div class="filter-btn" data-filter="vertical">
+                        <span>Vertical</span>
                     </div>
                 </div>
             </div>
