--- a/select-Frame.html
+++ b/select-Frame.html
@@ -34,19 +34,19 @@
             <div class="frame-slider-container">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide" data-type="portrait">
+                        <div class="swiper-slide" data-type="vertical">
                             <img src="frame/frame1.png" alt="Frame 1" class="frame">
                         </div>
-                        <div class="swiper-slide" data-type="portrait">  
+                        <div class="swiper-slide" data-type="vertical">  
                             <img src="frame/frame2.png" alt="Frame 2" class="frame">
                         </div>
-                        <div class="swiper-slide" data-type="portrait">
+                        <div class="swiper-slide" data-type="vertical">
                             <img src="frame/frame3.png" alt="Frame 3" class="frame">
                         </div>
-                        <div class="swiper-slide" data-type="portrait">
+                        <div class="swiper-slide" data-type="vertical">
                             <img src="frame/frame4.png" alt="Frame 4" class="frame">
                         </div>
-                        <div class="swiper-slide" data-type="portrait">
+                        <div class="swiper-slide" data-type="vertical">
                             <img src="frame/frame5.png" alt="Frame 5" class="frame">
                         </div>
                         <div class="swiper-slide" data-type="square">
